changed stack to arraylist